--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
         <p>Please visit <a href="https://www.hiyuansir.com">www.hiyuansir.com</a></p>
         <hr>
     </main>
-    
-
-
     <footer id="footer" role="footer">
-        <p>Copyright &copy; 2019-2024 <a href="https://www.hiyuansir.com">Mr.Yuan</a> All Rights Reserved.</p>
+        <p>By &copy; 2019-2024 <a href="https://www.hiyuansir.com">Mr.Yuan</a></p>
     </footer>
 
 </body>
